--- a/browser/style/compare.css
+++ b/browser/style/compare.css
@@ -36,12 +36,28 @@ main {
     overflow-y: auto; /* Enable vertical scrolling */
     }
 
+    .graphTitle {
+      margin-top: 25px;
+      font-size: 22px;
+      color: #4c4c4c;
+    }
+
     .graphDiv{
-      margin-left: 24%;
-      margin-top: 4%;
+      margin-left: 23.5%;
+      margin-top: 2.5%;
       width: 50%; 
-      height: 480px;
+      height: 500px;
       border-radius: 15px;
+      background: white;
+    }
+
+    .rankingDiv{
+      margin-left: 2%;
+      margin-top: 2.5%;
+      border-radius: 15px;
+      margin-right: 1.5%;
+      flex-grow: 1; 
+      height: 385px;
       background: white;
     }
 
@@ -146,4 +162,190 @@ main {
 [type=checkbox]:checked::-ms-check {
   box-shadow: none;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E %3Cpath d='M15.88 8.29L10 14.17l-1.88-1.88a.996.996 0 1 0-1.41 1.41l2.59 2.59c.39.39 1.02.39 1.41 0L17.3 9.7a.996.996 0 0 0 0-1.41c-.39-.39-1.03-.39-1.42 0z' fill='%23fff'/%3E %3C/svg%3E");
+}
+
+.leaderboard {
+  width: 310px;
+  height: 308px;
+  border-radius: 10px;
+}
+
+.leaderboard h1 {
+  font-size: 18px;
+  color: #e1e1e1;
+  padding: 12px 13px 18px;
+}
+
+.leaderboard ol {
+  counter-reset: leaderboard;
+  list-style-type: none;
+}
+
+.leaderboard ol li {
+  position: relative;
+  z-index: 1;
+  font-size: 14px;
+  counter-increment: leaderboard;
+  padding: 18px 10px 18px 50px;
+  cursor: pointer;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  transform: translateZ(0) scale(1, 1);
+}
+
+.leaderboard ol li::before {
+  content: counter(leaderboard);
+  position: absolute;
+  z-index: 2;
+  top: 15px;
+  left: 15px;
+  width: 20px;
+  height: 20px;
+  line-height: 20px;
+  color: #4c4c4c;
+  background: #fff;
+  border-radius: 20px;
+  text-align: center;
+}
+
+.leaderboard ol li mark {
+  position: absolute;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  width: 80%;
+  text-align: left;
+  height: 100%;
+  padding: 18px 10px 18px 50px;
+  margin: 0;
+  background: none;
+  color: #fff;
+}
+
+.leaderboard ol li mark::before,
+.leaderboard ol li mark::after {
+  content: "";
+  position: absolute;
+  z-index: 1;
+  bottom: -11px;
+  left: -9px;
+  border-top: 10px solid #71a9d5;
+  border-left: 10px solid transparent;
+  transition: all 0.1s ease-in-out;
+  opacity: 0;
+}
+
+.leaderboard ol li mark::after {
+  left: auto;
+  right: -9px;
+  border-left: none;
+  border-right: 10px solid transparent;
+}
+
+.leaderboard ol li small {
+  position: relative;
+  z-index: 2;
+  color: white;
+  display: block;
+  text-align: right;
+}
+
+.leaderboard ol li::after {
+  content: "";
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #71a9d5;
+  box-shadow: 0 3px 0 rgba(0, 0, 0, 0.08);
+  transition: all 0.3s ease-in-out;
+  opacity: 0;
+}
+
+.leaderboard ol li:nth-child(1) {
+  background: #dae4f2;
+}
+
+.leaderboard ol li:nth-child(1)::after {
+  background: #dae4f2;
+}
+
+.leaderboard ol li:nth-child(2) {
+  background: #9eb4d5;
+}
+
+.leaderboard ol li:nth-child(2)::after {
+  background: #9eb4d5;
+  box-shadow: 0 2px 0 rgba(0, 0, 0, 0.08);
+}
+
+.leaderboard ol li:nth-child(2) mark::before,
+.leaderboard ol li:nth-child(2) mark::after {
+  border-top: 6px solid #9eb4d5;
+  bottom: -7px;
+}
+
+.leaderboard ol li:nth-child(3) {
+  background: #5e83ba;
+}
+
+.leaderboard ol li:nth-child(3)::after {
+  background: #5e83ba;
+  box-shadow: 0 1px 0 rgba(0, 0, 0, 0.11);
+}
+
+.leaderboard ol li:nth-child(3) mark::before,
+.leaderboard ol li:nth-child(3) mark::after {
+  border-top: 2px solid #5e83ba;
+  bottom: -3px;
+}
+
+.leaderboard ol li:nth-child(4) {
+  background: #394e79;
+}
+
+.leaderboard ol li:nth-child(4)::after {
+  background: #394e79;
+  box-shadow: 0 -1px 0 rgba(0, 0, 0, 0.15);
+}
+
+.leaderboard ol li:nth-child(4) mark::before,
+.leaderboard ol li:nth-child(4) mark::after {
+  top: -7px;
+  bottom: auto;
+  border-top: none;
+  border-bottom: 6px solid #394e79;
+}
+
+.leaderboard ol li:nth-child(5) {
+  background: #202d45;
+  border-radius: 0 0 10px 10px;
+}
+
+.leaderboard ol li:nth-child(5)::after {
+  background: #202d45;
+  box-shadow: 0 -2.5px 0 rgba(0, 0, 0, 0.12);
+  border-radius: 0 0 10px 10px;
+}
+
+.leaderboard ol li:nth-child(5) mark::before,
+.leaderboard ol li:nth-child(5) mark::after {
+  top: -9px;
+  bottom: auto;
+  border-top: none;
+  border-bottom: 8px solid #202d45;
+}
+
+
+.leaderboard ol li:hover::after {
+  opacity: 1;
+  transform: scaleX(1.06) scaleY(1.03);
+}
+
+.leaderboard ol li:hover mark::before,
+.leaderboard ol li:hover mark::after {
+  opacity: 1;
+  transition: all 0.35s ease-in-out;
 }
